--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-once-cell = "0.5.2"
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.3.19", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.19"
