--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,20 @@ edition = "2021"
 async-once-cell = "0.5.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.3.19", features = ["derive"] }
+dbp_schema = { git = "https://github.com/exdata-inc/dbp-schema.git", rev = "865b9fb836a518eb0e49502bab5d41e054485421"}
 env_logger = "0.10.0"
 log = "0.4.19"
 once_cell = "1.18.0"
+prost = "0.11.9"
+prost-helper = "0.7.0"
 serde_json = "1.0.104"
-sxutil = { git = "https://github.com/exdata-inc/synerex_sxutil/", rev = "25e56ad3b431b45f16e51231c52e157ed9feb104"}
+sxutil = { git = "https://github.com/exdata-inc/synerex_sxutil/", rev = "dfb1171ed99f0336fec7954c7f0cb4eb2a8ece71"}
 synerex_api = { git = "https://github.com/exdata-inc/synerex_api.git", rev = "9c32bb01d0440cf2300609815adf7129ac0f8da5"}
 synerex_proto = { git = "https://github.com/exdata-inc/synerex_proto.git", rev = "a2cad4f8278c4c5ceb4d73f97fd5e5d5c3ffda82"}
 tokio = { version = "1.29.1", features = ["full"] }
+
+[build-dependencies]
+prost-serde = "0.3"
 
 [profile.release]
 panic = 'abort'
